BPER/DEVF/force-app/main/default/objects/ScheduledJob__c/ScheduledJob__c.object-meta.xml
<CustomObject>
    <label>ScheduledJob</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Nome ScheduledJob</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ScheduledJob</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>