BPER/DEVF/force-app/main/default/objects/ScheduledJob__c/fields/Attivo__c.field-meta.xml
<CustomField>
    <fullName>Attivo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Attivo</label>
    <type>Checkbox</type>
</CustomField>