BPER/DEVF/force-app/main/default/objects/ScheduledJob__c/fields/Codice_Gruppo__c.field-meta.xml
<CustomField>
    <fullName>Codice_Gruppo__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Codice Gruppo</label>
    <length>20</length>
    <type>Text</type>
</CustomField>