BPER/DEVF/force-app/main/default/objects/ScheduledJob__c/fields/CodiceGruppoOrdine__c.field-meta.xml
<CustomField>
    <fullName>CodiceGruppoOrdine__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CodiceGruppoOrdine</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>