BPER/DEVF/force-app/main/default/objects/ScheduledJob__c/fields/Data_Fine_Validit__c.field-meta.xml
<CustomField>
    <fullName>Data_Fine_Validit__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Data Fine Validità</label>
    <type>Date</type>
</CustomField>