BPER/DEVF/force-app/main/default/objects/ScheduledJob__c/fields/Descrizione__c.field-meta.xml
<CustomField>
    <fullName>Descrizione__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Descrizione</label>
    <length>255</length>
    <type>Text</type>
</CustomField>