BPER/DEVF/force-app/main/default/objects/ScheduledJob__c/fields/Domenica__c.field-meta.xml
<CustomField>
    <fullName>Domenica__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Domenica</label>
    <type>Checkbox</type>
</CustomField>