BPER/DEVF/force-app/main/default/objects/ScheduledJob__c/fields/Frequenza__c.field-meta.xml
<CustomField>
    <fullName>Frequenza__c</fullName>
    <label>Frequenza</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Giornaliera</fullName>
            </value>
            <value>
                <fullName>Settimanale</fullName>
            </value>
            <value>
                <fullName>Mensile</fullName>
            </value>
            <value>
                <fullName>Annuale</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>