BPER/DEVF/force-app/main/default/objects/ScheduledJob__c/fields/Giorni_Della_Settimana__c.field-meta.xml
<CustomField>
    <fullName>Giorni_Della_Settimana__c</fullName>
    <label>Giorni Della Settimana</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lunedi</fullName>
            </value>
            <value>
                <fullName>Martedi</fullName>
            </value>
            <value>
                <fullName>Mercoledi</fullName>
            </value>
            <value>
                <fullName>Giovedi</fullName>
            </value>
            <value>
                <fullName>Venerdi</fullName>
            </value>
            <value>
                <fullName>Sabato</fullName>
            </value>
            <value>
                <fullName>Domenica</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>