BPER/DEVF/force-app/main/default/objects/ScheduledJob__c/fields/Giovedi__c.field-meta.xml
<CustomField>
    <fullName>Giovedi__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Giovedi</label>
    <type>Checkbox</type>
</CustomField>