BPER/DEVF/force-app/main/default/objects/ScheduledJob__c/fields/Lunedi__c.field-meta.xml
<CustomField>
    <fullName>Lunedi__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lunedi</label>
    <type>Checkbox</type>
</CustomField>