BPER/DEVF/force-app/main/default/objects/ScheduledJob__c/fields/Martedi__c.field-meta.xml
<CustomField>
    <fullName>Martedi__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Martedi</label>
    <type>Checkbox</type>
</CustomField>