BPER/DEVF/force-app/main/default/objects/ScheduledJob__c/fields/Mercoledi__c.field-meta.xml
<CustomField>
    <fullName>Mercoledi__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mercoledi</label>
    <type>Checkbox</type>
</CustomField>