BPER/DEVF/force-app/main/default/objects/ScheduledJob__c/fields/Nome_Classe__c.field-meta.xml
<CustomField>
    <fullName>Nome_Classe__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Nome Classe</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>