BPER/DEVF/force-app/main/default/objects/ScheduledJob__c/fields/Note__c.field-meta.xml
<CustomField>
    <fullName>Note__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Note</label>
    <length>255</length>
    <type>Text</type>
</CustomField>