BPER/DEVF/force-app/main/default/objects/ScheduledJob__c/fields/Orario_Della_Partenza__c.field-meta.xml
<CustomField>
    <fullName>Orario_Della_Partenza__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Orario Della Partenza</label>
    <length>255</length>
    <type>Text</type>
</CustomField>