BPER/DEVF/force-app/main/default/objects/ScheduledJob__c/fields/Ordine_Di_Esecuzione__c.field-meta.xml
<CustomField>
    <fullName>Ordine_Di_Esecuzione__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Ordine Di Esecuzione</label>
    <length>255</length>
    <type>Text</type>
</CustomField>