BPER/DEVF/force-app/main/default/objects/ScheduledJob__c/fields/Ordine_Mensile__c.field-meta.xml
<CustomField>
    <fullName>Ordine_Mensile__c</fullName>
    <label>Ordine Mensile</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Primo</fullName>
            </value>
            <value>
                <fullName>Secondo</fullName>
            </value>
            <value>
                <fullName>Terzo</fullName>
            </value>
            <value>
                <fullName>Quarto</fullName>
            </value>
            <value>
                <fullName>Ultimo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>