BPER/DEVF/force-app/main/default/objects/ScheduledJob__c/fields/Sabato__c.field-meta.xml
<CustomField>
    <fullName>Sabato__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sabato</label>
    <type>Checkbox</type>
</CustomField>