BPER/DEVF/force-app/main/default/objects/ScheduledJob__c/fields/Tipologia_Della_Classe__c.field-meta.xml
<CustomField>
    <fullName>Tipologia_Della_Classe__c</fullName>
    <label>Tipologia Della Classe</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Batchable</fullName>
            </value>
            <value>
                <fullName>Schedulable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>