BPER/DEVF/force-app/main/default/objects/ScheduledJob__c/fields/Utente__c.field-meta.xml
<CustomField>
    <fullName>Utente__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Eseguito Come</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ScheduledJob</relationshipName>
    <type>Lookup</type>
</CustomField>