BPER/DEVF/force-app/main/default/objects/ScheduledJob__c/fields/Venerdi__c.field-meta.xml
<CustomField>
    <fullName>Venerdi__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Venerdi</label>
    <type>Checkbox</type>
</CustomField>