BPER/DEVF/force-app/main/default/objects/ScheduledJob__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Codice_Gruppo__c</columns>
    <columns>Batch_Size__c</columns>
    <columns>Attivo__c</columns>
    <columns>Utente__c</columns>
    <columns>Nome_Classe__c</columns>
    <columns>Ordine_Di_Esecuzione__c</columns>
    <columns>Trigger__c</columns>
    <columns>Orario_Della_Partenza__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>